--- a/.github/config.yml
+++ b/.github/config.yml
@@ -6,9 +6,6 @@ response:
   #Is available for issues
   issues: true
 
-  #Calculation based on pull_requests / issues or both
-  calculation_based: both
-
   #Response message
   reponse_message:
     soon_reponse: "Thank you for openning an issue. We appreciate your contribution towards the project, someone will get back to you soon. :hourglass:"
@@ -16,9 +13,12 @@ response:
 
   #Buffer time - 1 hr / 1 day
   buffer_time: 1 day
+  
+  #Calculation sample includes `open`, `closed` or `all` issues/pull requests
+  activity_state: open
 
   #Limit for the calculation sample
-  activities_count: 20
+  activities_count: 10
   
 #Response time reminder configuration
 reminder:
